--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tiny-care-terminal",
-  "version": "1.3.2",
+  "name": "@loklaan/tiny-care-terminal",
+  "version": "1.4.0-loklaan.0",
   "description": "A terminal that tries to take care of you 💖",
   "main": "care.js",
   "author": "Monica Dinculescu <noms@google.com>",
@@ -11,7 +11,7 @@
   "bin": {
     "tiny-care-terminal": "care.js"
   },
-  "repository": "https://github.com/notwaldorf/tiny-care-terminal.git",
+  "repository": "https://github.com/loklaan/tiny-care-terminal.git",
   "dependencies": {
     "ansi-art": "^1.2.0",
     "blessed": "^0.1.81",
